* Updated toast to wrap correctly if necessary. * Began adding framework for infinite scroll.

--- a/styles/common.css
+++ b/styles/common.css
@@ -53,7 +53,24 @@ a:hover {
     text-align: center;
 }
 
+.full-width {
+    width: 100%;
+    padding: 30px 0;
+    text-align: center;
+}
+
+.btn {
+    padding: 15px 20px;
+    width: 300px;
+    text-align: center;
+}
+
+.all-loaded {
+    display: none;
+}
+
 .footer {
     padding: 40px 0 20px;
     text-align: center;
+    font-size: 12px;
 }
