--- a/styles/toast.css
+++ b/styles/toast.css
@@ -1,7 +1,7 @@
 .toast {
     color: white;
     padding: 5px 15px;
-    height: 30px;
+    line-height: 30px;
     border-radius: 15px;
 
     position: fixed;
